ci fixes + price porfolio improvemets
